[package]
name = "layer8-primitives-rs"
version = "0.1.0"
edition = "2021"
authors = ["Osoro Bironga <fanosoro@gmail.com>"]
repository = "github.com/muse254/layer8-primitives-rs"
license = "GNU GPLv2"
readme = "README.md"
categories = ["wasm"]

[dependencies]
base64 = { version = "0.22.1" }
secp256k1 = { version = "0.29.1", features = ["rand-std", "hashes-std"] }
rand = { version = "0.8.5", features = ["small_rng"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
url = "2.5.2"
reqwest = "0.12.7"
aes-gcm = "0.10.3"
uuid = { version = "1", features = ["js", "v4", "fast-rng"] }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
jsonwebtoken = "9"
hyper = { version = "1", features = ["full"] }
hyper-util = "0.1.8"
tower = "0.5.1"
http-body-util = "0.1.2"
http = "1.1.0"
